--- a/css/mapa.css
+++ b/css/mapa.css
@@ -21,7 +21,7 @@ body{
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       margin: 0px;
-      width: 13%;
+      width: 20%;
       z-index: 3;
       bottom: 0px;
   }
@@ -38,4 +38,8 @@ body{
 
 .container{
     position: relative;
+}
+#imagenesCuadro img{
+    width: 100%;
+    height: 100%;
 }
