--- a/css/mapa.css
+++ b/css/mapa.css
@@ -13,7 +13,7 @@ body{
     
 }
 
-#cuadroTexto {
+#cuadroTexto, #estadisticaCuadro{
       display: none;
       position: absolute;
       background-color: #f9f9f9;
@@ -22,7 +22,7 @@ body{
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       margin: 0px;
-      width: 20%;
+      width: 25%;
       z-index: 3;
       bottom: 0px;
   }
@@ -40,7 +40,13 @@ body{
 .container{
     position: relative;
 }
-#imagenesCuadro img{
-    width: 100%;
-    height: 100%;
+
+#estadisticaCuadro{
+    width: 20%;
+    height: 30%;
+    right: 0px;
+    justify-items: center;
+    align-items: center;
+    padding: 0;
+
 }
