--- a/css/mapa.css
+++ b/css/mapa.css
@@ -22,7 +22,7 @@ body{
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       margin: 0px;
-      width: 25%;
+      width: 27%;      
       z-index: 3;
       bottom: 0px;
   }
@@ -42,11 +42,14 @@ body{
 }
 
 #estadisticaCuadro{
-    width: 20%;
-    height: 30%;
+    width: 25%;
+    height: 32%;
     right: 0px;
     justify-items: center;
     align-items: center;
     padding: 0;
 
+}
+#informacionCuadro{
+    padding-top: 10px;
 }
